2015-11-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/framework.make: Remove unused methods (-frameworkEnv and
	-frameworkPath) from the dummy class.

2015-11-20 Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests.in: Deprecate Env.sh ... use TestInfo to
	set test ewnvironment
	* Instance/framework.make: Add rule to invoke gnustep-tests
	* Instance/library.make: Add rule to invoke gnustep-tests
	* Master/clibrary.make: pass 'make check' to instance
	* Master/framework.make: pass 'make check' to instance
	* Master/library.make: pass 'make check' to instance
	* Master/test-library.make: pass 'make check' to instance
	Simple minded initial attempt to make unit testing for libraries and
	frameworks easier by having a built-in rule to execute test files in
	a subdirectory specified using xxx_TEST_DIR

2015-09-23  Germán Arias <germanandre@gmx.es>

	* Documentation/README.MinGW: Fix errors in services path.

2015-08-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: Fix the previous change, which had broken the tests
	for Objective C++, the fragile API and native exception support,
	by using the correct autoconf macros.

	* configure: Regenerated.

2015-08-16 Richard Frith-Macdonald <rfm@gnu.org>

	* library-combo.make: Use David's suggested runtime flag for the
	next generation (ng) runtime combo.
	* configure.ac: Check for compiler blocks support for ng combo.
	Fix some program source quoting for newer autoconf

2015-08-08  Germán Arias <germanandre@gmx.es>

	* Documentation/README.MinGW: Add instructions to install aspell and
	to make a standalone directory to distribute apps.

2015-06-25 Niels Grewe <niels.grewe@halbordnung.de>

	* Instance/Shared/java.make: Fix escaping of inner classes when
	building jar files.

2015-06-09  Riccardo Mottola <rm@gnu.org>

	* config.make.in
	* configure.ac
	* target.make
	Check for nm and gnm as gnu nm, use a $(NM) variable instead of
	hard-coding the binary name of nm
	* configure
	Regerenated
