@@ -809,12 +809,41 @@ endif
 
 internal-framework-check::
 ifneq ($($(GNUSTEP_INSTANCE)_TEST_DIR),)
-	@(echo "export LD_LIBRARY_PATH=\"$$(pwd)/$(GNUSTEP_INSTANCE).framework:$(LD_LIBRARY_PATH)\"" > $($(GNUSTEP_INSTANCE)_TEST_DIR)/TestInfo; \
+	@(\
+	if !(grep gscheckenv \
+	  "$($(GNUSTEP_INSTANCE)_TEST_DIR)/TestInfo" \
+	  >/dev/null 2>/dev/null); then \
+	  echo "# include settings generated by 'make check'" \
+	    >> "$($(GNUSTEP_INSTANCE)_TEST_DIR)/TestInfo"; \
+	  echo ". ./gscheckenv" \
+	    >> "$($(GNUSTEP_INSTANCE)_TEST_DIR)/TestInfo"; \
+	fi; \
+	echo "# Generated by 'make check'" \
+	  > $($(GNUSTEP_INSTANCE)_TEST_DIR)/gscheckenv; \
+	echo "export LD_LIBRARY_PATH=\"$$(pwd)/$(GNUSTEP_INSTANCE).framework:$(LD_LIBRARY_PATH)\"" > $($(GNUSTEP_INSTANCE)_TEST_DIR)/gscheckenv; \
+	if !(grep gscheckmak \
+	  "$($(GNUSTEP_INSTANCE)_TEST_DIR)/GNUmakefile.preamble" \
+	  >/dev/null 2>/dev/null); then \
+	  echo "# include settings generated by 'make check'" \
+	    >> "$($(GNUSTEP_INSTANCE)_TEST_DIR)/GNUmakefile.preamble"; \
+	  echo "include ./gscheckmak" \
+	    >> "$($(GNUSTEP_INSTANCE)_TEST_DIR)/GNUmakefile.preamble"; \
+	fi; \
+	echo "# Generated by 'make check'" \
+	  > $($(GNUSTEP_INSTANCE)_TEST_DIR)/gscheckmak; \
+	echo "ADDITIONAL_INCLUDE_DIRS += \"-I$(GNUSTEP_MAKEFILES)/TestFramework -I$(FRAMEWORK_VERSION_DIR)/Headers\"" \
+	  >> $($(GNUSTEP_INSTANCE)_TEST_DIR)/gscheckmak; \
+	echo "ADDITIONAL_LIB_DIRS += \"-L$(FRAMEWORK_VERSION_DIR))\"" \
+	  >> $($(GNUSTEP_INSTANCE)_TEST_DIR)/gscheckmak; \
+	echo "ADDITIONAL_TOOL_LIBS += \"-l$(GNUSTEP_INSTANCE)\"" \
+	  >> $($(GNUSTEP_INSTANCE)_TEST_DIR)/gscheckmak; \
+        unset MAKEFLAGS; \
 	if [ "$(DEBUG)" = "" ]; then \
-	  gnustep-tests $($(GNUSTEP_INSTANCE)_TEST_DIR);\
+	  gnustep-tests --verbose $($(GNUSTEP_INSTANCE)_TEST_DIR);\
 	else \
 	  gnustep-tests --debug $($(GNUSTEP_INSTANCE)_TEST_DIR);\
-	fi;)
+	fi;\
+	)
 endif
 
 #
