@@ -1,3 +1,12 @@
+2015-11-24 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Instance/framework.make:
+	* Instance/library.make:
+	* TestFramework/gnustep-tests.in:
+	Improve automated library and framework testcase handling, with
+	code to tell the testcases where to find the library/framework
+	headers and what to link with in order to do the tests.
+
 2015-11-21 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Instance/framework.make: Remove unused methods (-frameworkEnv and
